# commonsense-validation-and-explanation

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: README.md  clean_a_test_810.csv  clean_a_train_3232.csv  subtaskA_answers.csv  subtaskA_dev_data_1994.csv  subtaskA_test_data_2000.csv  subtaskA_train_data_20000.csv  subtaskA_trial_data.csv  subtaskB_answers.csv  subtaskB_trial_data.csv  subtaskC_answers.csv  subtaskC_trial_data.csv
data/dev/: .~lock.subtaskA_gold_answers.csv#
src/: config.py  create_split_subtask_a.py  data.py  defaults.py  enums.py  functions.py  lime_and_shap.ipynb  run_training.ps1  run_training_freeze.ps1  script.sh  train.py  train_args.py  trial.ipynb  validation.py
src/data/: load_data.py
src/notebooks/: explore.ipynb
src/scoring/: evaluate.py
