[project]
name = "commonsense-validation-and-explanation"
description = "Project from the course Text Analysis and Retrieval at the FER"
version = "0.1.0"

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

[tool.bandit]
# tests = ["B201", "B301"]
skips = ["B101", "B601", "B311"]

[tool.pylint.'MESSAGES CONTROL']
disable = ["C0301", "W0614", "W0105"]
generated-members = ["numpy.*", "torch.*"]